# qml-test-recorder

./: .gitignore  CMakeLists.txt  ClickDebugger.qml  LICENSE  MainPageTest.qml  TestcaseRecorder.qml
example/simple/: CMakeLists.txt  SimpleWindow.qml  main.cpp
example/simple/test/: main.cpp  tst_Simple.qml
src/: EventFilter.cpp  EventFilter.h  ObjectFinder.cpp  ObjectFinder.h
